--- a/index.html
+++ b/index.html
@@ -260,7 +260,7 @@
 <body>
   <header>
     <div style="display:flex;align-items:center;gap:0.5rem;">
-      <img src="Short_Logo.jpg" alt="AzovNorth Industries Logo" class="logo">
+      <img src="WEB_Logo.jpg" alt="AzovNorth Industries Logo" class="logo">
     </div>
     <div class="contact-mini">
       <div><strong>AzovNorth Industries</strong> – Winnipeg, Manitoba</div>
