--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
       justify-content:space-between;
       gap:1rem;
       border-bottom:1px solid var(--border);
-      background:rgba(5,8,20,0.9);
+      background:#101c2a;
       backdrop-filter:blur(8px);
       position:sticky;
       top:0;
