--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
       z-index:20;
     }
     header img.logo{
-      height:112px;
+      height:75px;
       max-width:520px;
       object-fit:contain;
     }
@@ -272,7 +272,7 @@
   <main>
     <section class="hero" id="top">
       <div>
-        <h1>Industrial Automation Modernization &amp; Control System Upgrades</h1>
+        <h1>Industrial Automation &amp; Control System Upgrades</h1>
         <h2>Where Sparks Meet Innovation – Serving Winnipeg and Manitoba</h2>
         <p>AzovNorth Industries helps manufacturers keep critical equipment running by auditing existing control systems, backing up programs, and planning safe migrations from aging PLC and HMI platforms to modern, supportable solutions.</p>
         <div class="hero-badges">
