--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
     header .contact-mini{
       text-align:right;
       font-size:0.85rem;
-      color:var(--text-muted);
+      color:#fcfefd;
     }
     header .contact-mini div{white-space:nowrap;}
     main{padding:0 5vw 4rem;}
