--- a/index.html
+++ b/index.html
@@ -100,9 +100,9 @@
     .btn-primary{
       background:linear-gradient(135deg,#e53935,#ffb74d);
       color:#fff;
-      box-shadow:0 0 18px rgba(229,57,53,0.55);
+      -shadow:0 0 18px rgba(229,57,53,0.55);
     }
-    .btn-primary:hover{transform:translateY(-1px);box-shadow:0 0 24px rgba(229,57,53,0.75);}
+    .btn-primary:hover{transform:translateY(-1px);-shadow:0 0 24px rgba(229,57,53,0.75);}
     .btn-secondary{
       background:transparent;
       color:var(--accent-soft);
@@ -114,7 +114,7 @@
       padding:1.4rem 1.3rem;
       background:linear-gradient(140deg,rgba(229,57,53,0.15),rgba(21,26,44,0.96));
       border:1px solid rgba(255,255,255,0.08);
-      box-shadow:0 22px 40px rgba(0,0,0,0.55);
+      -shadow:0 22px 40px rgba(0,0,0,0.55);
     }
     .hero-aside h3{
       font-size:1.05rem;
@@ -174,7 +174,7 @@
       align-items:flex-start;
       gap:0.55rem;
     }
-    .card-header input[type=checkbox]{margin-top:0.23rem;accent-color:var(--accent);}
+    .card-header input[type=check]{margin-top:0.23rem;accent-color:var(--accent);}
     .card-header h3{
       font-size:1rem;
       margin:0;
@@ -211,7 +211,7 @@
     }
     .box textarea{min-height:90px;resize:vertical;}
     .small{
-      font-size:1.15rem;
+      font-size:0.9rem;
       color:var(--text-muted);
     }
     .summary{
