--- a/index.html
+++ b/index.html
@@ -185,11 +185,16 @@
     .card ul li{margin-bottom:0.12rem;}
     .tagline{font-size:0.82rem;color:var(--text-muted);margin-top:auto;}
     .two-col{
-      display:grid;
-      grid-template-columns:minmax(0,1.15fr) minmax(0,1fr);
-      gap:1.75rem;
-      align-items:flex-start;
-    }
+  display:grid;
+  grid-template-columns:repeat(2,minmax(0,1fr));
+  gap:1.75rem;
+  align-items:stretch;        /* both boxes same height */
+}
+.two-col .box{
+  height:100%;                /* stretch to same height */
+  display:flex;
+  flex-direction:column;
+}
     .box{
       background:var(--card-bg);
       border-radius:16px;
@@ -215,17 +220,17 @@
       color:var(--text-muted);
     }
     .summary{
-      font-family:ui-monospace,Menlo,Consolas,monospace;
-      white-space:pre-wrap;
-      font-size:0.8rem;
-      padding:0.55rem 0.6rem;
-      border-radius:8px;
-      background:#050814;
-      border:1px solid #343a4f;
-      max-height:260px;
-      overflow:auto;
-      margin-bottom:0.6rem;
-    }
+  font-family:ui-monospace,Menlo,Consolas,monospace;
+  white-space:pre-wrap;
+  font-size:0.8rem;
+  padding:0.55rem 0.6rem;
+  border-radius:8px;
+  background:#050814;
+  border:1px solid #343a4f;
+  max-height:360px;   /* or delete this line entirely */
+  overflow:auto;
+  margin-bottom:0.6rem;
+}
     .status{
       font-size:0.82rem;
       color:var(--accent-soft);
