--- a/index.html
+++ b/index.html
@@ -291,8 +291,10 @@
     </div>
     <div class="contact-mini">
       <div><strong>AzovNorth Industries</strong> – Winnipeg, Manitoba</div>
-      <div>Tel: (204) 292-6667 · (204) 869-6305</div>
-      <div>Email: billy.fuller@azovnorth.ca · matvii.ianchenko@azovnorth.ca</div>
+      <div>Tel: (204) 292-6667</div>
+      <div>     (204) 869-6305</div>
+      <div>Email: billy.fuller@azovnorth.ca</div>
+      <div>       matvii.ianchenko@azovnorth.ca</div>
     </div>
   </header>
 
