--- a/index.html
+++ b/index.html
@@ -5,6 +5,24 @@
   <title>AzovNorth Industries | Industrial Automation & Control</title>
   <meta name="viewport" content="width=device-width,initial-scale=1">
   <meta name="description" content="AzovNorth Industries provides industrial automation, PLC and HMI programming, legacy control system audits, and modernization planning for manufacturers in Winnipeg and Manitoba.">
+  <script type="application/ld+json">
+{
+  "@context": "https://schema.org",
+  "@type": "LocalBusiness",
+  "name": "AzovNorth Industries",
+  "address": {
+    "@type": "PostalAddress",
+    "addressLocality": "Winnipeg",
+    "addressRegion": "MB",
+    "addressCountry": "CA"
+  },
+  "telephone": ["+1-204-292-6667", "+1-204-869-6305"],
+  "email": "billy.fuller@azovnorth.ca",
+  "url": "https://azovnorth.github.io/website/",
+  "areaServed": "Manitoba",
+  "description": "Industrial automation, PLC and HMI programming, control system audits, and modernization planning."
+}
+</script>
   <style>
     :root{
       --bg-dark:#050814;
