--- a/index.html
+++ b/index.html
@@ -540,7 +540,7 @@
         </div>
         <div class="box">
           <h3>Quote Request Summary (Preview)</h3>
-          <p class="small" style="margin-bottom:0.4rem;">This is a text summary you can also copy into your own email if needed. When you submit the form, we receive the same information.</p>
+          <p class="small" style="margin-bottom:0.4rem;">This summary can be copied into an email or sent to us directly.</p>
           <div id="summary" class="summary">(Select services and click “Generate quote summary” to see a preview.)</div>
           <p class="small">No prices are shown here. After reviewing the scope, AzovNorth Industries will respond with a detailed proposal and pricing.</p>
         </div>
