--- a/index.html
+++ b/index.html
@@ -513,7 +513,7 @@
 
     <section id="quote-section">
       <h2 class="section-title">Request a Service Quote</h2>
-      <p class="section-sub">Use this form to tell us which services you are interested in. We will review your information and contact you with clarifying questions and a detailed quote.</p>
+      <p class="section-sub">Use this form to tell us which services you are interested in. We will review your information and may contact you with clarifying questions before preparing a detailed quote.</p>
       <div class="two-col">
         <div class="box">
           <h3>Company &amp; Project Details</h3>
