--- a/index.html
+++ b/index.html
@@ -479,7 +479,7 @@
           <div class="card-header">
             <input type="checkbox" id="svc-mods" onchange="syncService('PLC & HMI Program Modifications / Feature Upgrades',this.checked)">
             <div>
-              <h3>PLC &amp; HMI Modifications / Feature Upgrades</h3>
+              <h3>PLC &amp; HMI Program Modifications / Feature Upgrades</h3>
               <small>Smaller changes and improvements to existing systems</small>
             </div>
           </div>
@@ -544,6 +544,62 @@
           <div id="summary" class="summary">(Select services and click “Generate quote summary” to see a preview.)</div>
           <p class="small">No prices are shown here. After reviewing the scope, AzovNorth Industries will respond with a detailed proposal and pricing.</p>
         </div>
+      </div>
+    </section>
+
+    <section id="projects">
+      <div class="pill">Recent Work</div>
+      <h2 class="section-title">Selected Automation Projects</h2>
+      <p class="section-sub">A few examples of control system upgrade and modernization work completed by AzovNorth Industries.</p>
+
+      <div class="services-grid">
+        <article class="card">
+          <div class="card-header">
+            <div>
+              <h3>Packaging Line PLC Upgrade</h3>
+              <small>Legacy SLC 5/03 to modern controller</small>
+            </div>
+          </div>
+          <img src="projects/packaging-line.jpg" alt="Upgraded PLC panel for packaging line" style="width:100%;border-radius:10px;margin:0.4rem 0;">
+          <p>Replaced an aging PLC with a modern platform, added structured tags, and improved diagnostics to reduce unplanned downtime.</p>
+          <ul>
+            <li>New PLC hardware and I/O mapping</li>
+            <li>Clean, documented ladder logic</li>
+            <li>Startup support and operator training</li>
+          </ul>
+        </article>
+
+        <article class="card">
+          <div class="card-header">
+            <div>
+              <h3>Conveyor HMI Redesign</h3>
+              <small>Improved operator visibility and alarms</small>
+            </div>
+          </div>
+          <img src="projects/conveyor-hmi.jpg" alt="Redesigned HMI screens for conveyor system" style="width:100%;border-radius:10px;margin:0.4rem 0;">
+          <p>Redesigned HMI screens for a multi‑zone conveyor, making it easier for operators to see faults and adjust speeds.</p>
+          <ul>
+            <li>New overview and detail screens</li>
+            <li>Alarm summary and trends</li>
+            <li>Consistent tag naming and navigation</li>
+          </ul>
+        </article>
+
+        <article class="card">
+          <div class="card-header">
+            <div>
+              <h3>Control Panel Audit &amp; Report</h3>
+              <small>Risk review for production line</small>
+            </div>
+          </div>
+          <img src="projects/panel-audit.jpg" alt="Documented industrial control panel audit" style="width:100%;border-radius:10px;margin:0.4rem 0;">
+          <p>Completed a structured audit of an existing control panel, identifying obsolete components and wiring issues.</p>
+          <ul>
+            <li>Photo‑based report with findings</li>
+            <li>Prioritized risk list</li>
+            <li>Recommended upgrade roadmap</li>
+          </ul>
+        </article>
       </div>
     </section>
 
