--- a/index.html
+++ b/index.html
@@ -556,8 +556,8 @@
         <article class="card">
           <div class="card-header">
             <div>
-              <h3>Packaging Line PLC Upgrade</h3>
-              <small>Legacy SLC 5/03 to modern controller</small>
+              <h3>Packaging Line PLC and HMI Upgrade</h3>
+              <small>Legacy PLC-5/15 to modern controller</small>
             </div>
           </div>
           <img src="projects/packaging-line.jpg" alt="Upgraded PLC panel for packaging line" style="width:100%;border-radius:10px;margin:0.4rem 0;">
