--- a/index.html
+++ b/index.html
@@ -580,8 +580,8 @@
           <p>Redesigned HMI screens for a multi‑zone conveyor, making it easier for operators to see faults and adjust speeds.</p>
           <ul>
             <li>New overview and detail screens</li>
-            <li>Alarm summary and trends</li>
-            <li>Consistent tag naming and navigation</li>
+            <li>Alarm summary and merge switch control</li>
+            <li>Dynamic speed control and automatic shutdown</li>
           </ul>
         </article>
 
