--- a/index.html
+++ b/index.html
@@ -573,7 +573,7 @@
           <div class="card-header">
             <div>
               <h3>Conveyor HMI Redesign</h3>
-              <small>Improved operator visibility and alarms</small>
+              <small>Improved operator visibility and alarms for maintenance team</small>
             </div>
           </div>
           <img src="projects/conveyor-hmi.jpg" alt="Redesigned HMI screens for conveyor system" style="width:100%;border-radius:10px;margin:0.4rem 0;">
