--- a/index.html
+++ b/index.html
@@ -588,16 +588,15 @@
         <article class="card">
           <div class="card-header">
             <div>
-              <h3>Control Panel Audit &amp; Report</h3>
-              <small>Risk review for production line</small>
+              <h3>Turnkey PLC Migration</h3>
+              <small>Reverse engineering of code to a new platform</small>
             </div>
           </div>
           <img src="projects/panel-audit.jpg" alt="Documented industrial control panel audit" style="width:100%;border-radius:10px;margin:0.4rem 0;">
-          <p>Completed a structured audit of an existing control panel, identifying obsolete components and wiring issues.</p>
+          <p>Moving the system from old Allen-Bradley PLC-5 to a AutomationDirect platform, including design, programming, testing, and commissioning support.</p>
           <ul>
-            <li>Photo‑based report with findings</li>
-            <li>Prioritized risk list</li>
-            <li>Recommended upgrade roadmap</li>
+            <li>Program rewrite from RSLogix 500 for Click ladder logic</li>
+            <li>Testing and commissioning process</li>
           </ul>
         </article>
       </div>
