--- a/index.html
+++ b/index.html
@@ -593,10 +593,11 @@
             </div>
           </div>
           <img src="projects/panel-audit.jpg" alt="Documented industrial control panel audit" style="width:100%;border-radius:10px;margin:0.4rem 0;">
-          <p>Moving the system from old Allen-Bradley PLC-5 to a AutomationDirect platform, including design, programming, testing, and commissioning support.</p>
+          <p>Moving the system from old Allen-Bradley PLC-5 to an AutomationDirect platform, including design, programming, testing, and commissioning support.</p>
           <ul>
             <li>Program rewrite from RSLogix 500 for Click ladder logic</li>
-            <li>Testing and commissioning process</li>
+            <li>Offline testing and commissioning process</li>
+            <li>Updated documentation</li>
           </ul>
         </article>
       </div>
