--- a/index.html
+++ b/index.html
@@ -565,7 +565,7 @@
           <ul>
             <li>New PLC hardware and I/O mapping</li>
             <li>Clean, documented ladder logic</li>
-            <li>Startup support and operator training</li>
+            <li>Reduced troubleshooting time and improved fault visibility</li>
           </ul>
         </article>
 
@@ -579,9 +579,9 @@
           <img src="projects/conveyor-hmi.jpg" alt="Redesigned HMI screens for conveyor system" style="width:100%;border-radius:10px;margin:0.4rem 0;">
           <p>Redesigned HMI screens for a multi‑zone conveyor, making it easier for operators to see faults and adjust speeds.</p>
           <ul>
-            <li>New overview and detail screens</li>
             <li>Alarm summary and merge switch control</li>
             <li>Dynamic speed control and automatic shutdown</li>
+            <li>Faster fault identification for operators and maintenance</li>
           </ul>
         </article>
 
@@ -597,7 +597,7 @@
           <ul>
             <li>Program rewrite from RSLogix 500 for Click ladder logic</li>
             <li>Offline testing and commissioning process</li>
-            <li>Updated documentation</li>
+            <li>Extended system lifecycle and eliminated obsolete hardware risk</li>
           </ul>
         </article>
       </div>
