--- a/index.html
+++ b/index.html
@@ -550,7 +550,7 @@
     <section id="projects">
       <div class="pill">Recent Work</div>
       <h2 class="section-title">Selected Automation Projects</h2>
-      <p class="section-sub">A few examples of control system upgrade and modernization work completed by AzovNorth Industries.</p>
+      <p class="section-sub">A few examples of control system upgrade and modernization work completed by AzovNorth Industries. Project details are generalized to respect client confidentiality.</p>
 
       <div class="services-grid">
         <article class="card">
