--- a/index.html
+++ b/index.html
@@ -216,7 +216,9 @@
     .card ul{padding-left:1.1rem;font-size:0.84rem;color:var(--text-muted);}
     .card ul li{margin-bottom:0.12rem;}
     .tagline{font-size:0.82rem;color:var(--text-muted);margin-top:auto;}
-
+#projects .card{
+  background:linear-gradient(160deg,#151a2c,#101425);
+}
     .two-col{
       display:grid;
       grid-template-columns:repeat(2,minmax(0,1fr));
