--- a/index.html
+++ b/index.html
@@ -559,7 +559,7 @@
           <div class="card-header">
             <div>
               <h3>Packaging Line PLC and HMI Upgrade</h3>
-              <small>Upgrading a legacy PLC-5/15 to modern controller</small>
+              <small>Upgrading a legacy PLC-5/15 to a modern PLC platform</small>
             </div>
           </div>
           <img src="projects/packaging-line.jpg" alt="Upgraded PLC panel for packaging line" style="width:100%;border-radius:10px;margin:0.4rem 0;">
