--- a/index.html
+++ b/index.html
@@ -310,12 +310,12 @@
       <img src="./WEB_Logo.jpg" alt="AzovNorth Industries Logo" class="logo">
     </div>
     <div class="contact-mini">
-      <div><strong>AzovNorth Industries</strong> – Winnipeg, Manitoba</div>
-      <div>Tel: (204) 292-6667</div>
-      <div>(204) 869-6305</div>
-      <div>Email: billy.fuller@azovnorth.ca</div>
-      <div>matvii.ianchenko@azovnorth.ca</div>
-    </div>
+  <div><strong>AzovNorth Industries</strong> – Winnipeg, Manitoba</div>
+  <div>Tel: <a href="tel:+12042926667">(204) 292-6667</a></div>
+  <div>Tel: <a href="tel:+12048696305">(204) 869-6305</a></div>
+  <div>Email: <a href="mailto:billy.fuller@azovnorth.ca">billy.fuller@azovnorth.ca</a></div>
+  <div><a href="mailto:matvii.ianchenko@azovnorth.ca">matvii.ianchenko@azovnorth.ca</a></div>
+</div>
   </header>
 
   <main>
