--- a/index.html
+++ b/index.html
@@ -610,7 +610,7 @@
       <div class="contact-cols">
         <div class="box">
           <h3>Direct Contact</h3>
-          <p class="small"><strong>Phone:</strong><br>(204) 292‑6667<br>(204) 869‑6305</p>
+          <p class="small"><strong>Phone:</strong><br><a href="tel:+12042926667">(204) 292-6667</a><br><a href="tel:+12048696305">(204) 869-6305</a></p>
           <p class="small" style="margin-top:0.4rem;"><strong>Email:</strong><br><a href="mailto:billy.fuller@azovnorth.ca">billy.fuller@azovnorth.ca</a><br><a href="mailto:matvii.ianchenko@azovnorth.ca">matvii.ianchenko@azovnorth.ca</a></p>
           <p class="small" style="margin-top:0.4rem;"><strong>Location:</strong><br>Winnipeg, Manitoba, Canada</p>
         </div>
