--- a/index.html
+++ b/index.html
@@ -374,8 +374,7 @@
     <section id="services">
       <div class="pill">Phase 1 – Review &amp; Planning</div>
       <h2 class="section-title">Review &amp; Planning Services</h2>
-      <p class="section-sub">These services help you understand the current condition of your automation systems and define safe, realistic upgrade paths.</p>
-      <p class="section-sub">Serving manufacturing and processing industry across Manitoba.</p>
+      <p class="section-sub">These services help you understand the current condition of your automation systems and define safe, realistic upgrade paths. Serving manufacturing and processing industry across Manitoba.</p>
       <div class="services-grid">
         <article class="card">
           <div class="card-header">
