--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
   },
   "telephone": ["+1-204-292-6667", "+1-204-869-6305"],
   "email": "billy.fuller@azovnorth.ca",
-  "url": "https://azovnorth.github.io/website/",
+  "url": "https://www.azovnorth.ca",
   "areaServed": "Manitoba",
   "description": "Industrial automation, PLC and HMI programming, control system audits, and modernization planning."
 }
