--- a/index.html
+++ b/index.html
@@ -641,16 +641,19 @@
           <p class="small" style="margin-top:0.4rem;"><strong>Location:</strong><br>Winnipeg, Manitoba, Canada</p>
         </div>
         <div class="box">
-          <h3>Quick Message (Optional)</h3>
-          <label>Your Name</label>
-          <input type="text" placeholder="Name">
-          <label>Your Email</label>
-          <input type="email" placeholder="you@example.com">
-          <label>Message</label>
-          <textarea placeholder="Short description of how we can help you."></textarea>
-          <button class="btn btn-secondary" type="button" onclick="alert('This is a demo form. Please email or call us directly to start a project.')">Send (demo)</button>
-          <p class="small" style="margin-top:0.4rem;">For real projects, please call or email using the contact information provided.</p>
-        </div>
+  <h3>Quick Message (Optional)</h3>
+  <form action="https://formspree.io/f/mqarjaew" method="POST">
+    <label for="contact-name">Your Name</label>
+    <input id="contact-name" name="name" type="text" placeholder="Name" required>
+    <label for="contact-email">Your Email</label>
+    <input id="contact-email" name="email" type="email" placeholder="you@example.com" required>
+    <label for="contact-message">Message</label>
+    <textarea id="contact-message" name="message" placeholder="Short description of how we can help you." required></textarea>
+    <input type="hidden" name="_subject" value="New message from AzovNorth website">
+    <button class="btn btn-secondary" type="submit">Send message</button>
+  </form>
+  <p class="small" style="margin-top:0.4rem;">For urgent projects, please call or email using the contact information provided.</p>
+</div>
       </div>
     </section>
   </main>
