--- a/index.html
+++ b/index.html
@@ -643,15 +643,26 @@
         <div class="box">
   <h3>Quick Message (Optional)</h3>
   <form action="https://formspree.io/f/mqarjaew" method="POST">
-    <label for="contact-name">Your Name</label>
-    <input id="contact-name" name="name" type="text" placeholder="Name" required>
-    <label for="contact-email">Your Email</label>
-    <input id="contact-email" name="email" type="email" placeholder="you@example.com" required>
-    <label for="contact-message">Message</label>
-    <textarea id="contact-message" name="message" placeholder="Short description of how we can help you." required></textarea>
-    <input type="hidden" name="_subject" value="New message from AzovNorth website">
-    <button class="btn btn-secondary" type="submit">Send message</button>
-  </form>
+  <label for="contact-name">Your Name</label>
+  <input id="contact-name" name="name" type="text" placeholder="Name" required>
+
+  <label for="contact-email">Your Email</label>
+  <input id="contact-email" name="email" type="email" placeholder="you@example.com" required>
+
+  <label for="contact-message">Message</label>
+  <textarea id="contact-message" name="message" placeholder="Short description of how we can help you." required></textarea>
+
+  <!-- Email subject -->
+  <input type="hidden" name="_subject" value="New message from AzovNorth website">
+
+  <!-- Redirect after success -->
+  <input type="hidden" name="_redirect" value="https://www.azovnorth.ca/thank-you.html">
+
+  <!-- Honeypot spam trap -->
+  <input type="text" name="_gotcha" style="display:none">
+
+  <button class="btn btn-secondary" type="submit">Send message</button>
+</form>
   <p class="small" style="margin-top:0.4rem;">For urgent projects, please call or email using the contact information provided.</p>
 </div>
       </div>
