--- a/index.html
+++ b/index.html
@@ -10,19 +10,30 @@
   <script type="application/ld+json">
 {
   "@context": "https://schema.org",
-  "@type": "LocalBusiness",
+  "@type": "ProfessionalService",
   "name": "AzovNorth Industries",
+  "url": "https://www.azovnorth.ca",
+  "description": "Industrial automation, PLC and HMI programming, control system audits, and modernization planning.",
   "address": {
     "@type": "PostalAddress",
     "addressLocality": "Winnipeg",
     "addressRegion": "MB",
+    "postalCode": "R2L 1Z6",
     "addressCountry": "CA"
   },
-  "telephone": ["+1-204-292-6667", "+1-204-869-6305"],
-  "email": "billy.fuller@azovnorth.ca",
-  "url": "https://www.azovnorth.ca",
-  "areaServed": "Manitoba",
-  "description": "Industrial automation, PLC and HMI programming, control system audits, and modernization planning."
+  "areaServed": {
+    "@type": "AdministrativeArea",
+    "name": "Manitoba"
+  },
+  "telephone": [
+    "+1-204-292-6667",
+    "+1-204-869-6305"
+  ],
+  "email": [
+    "billy.fuller@azovnorth.ca",
+    "matvii.ianchenko@azovnorth.ca",
+    "azovnorth@gmail.com"
+  ]
 }
 </script>
   <style>
